--- a/app/views/guest/murmurs/index.html.slim
+++ b/app/views/guest/murmurs/index.html.slim
@@ -6,9 +6,9 @@
     .mypage_profile_section
       .mypage_profile_label
         .edit_title = 'みんなの投稿'
-        button.edit_button.btn.btn-danger[type="button" data-toggle="modal" data-target="#murmurModal"]
+        button.edit_button.btn.btn-danger[type="button" data-toggle="modal" data-target="#createMurmurModal"]
           |  投稿
-        = render 'form_modal'
+        = render 'create_murmur_modal'
 
       .mypage_profile_body
         = render @murmurs
