--- a/app/views/guest/communities/_create_topic_modal.html.slim
+++ b/app/views/guest/communities/_create_topic_modal.html.slim
@@ -12,7 +12,7 @@
             .row
               .col-md-12.text-center
                 .form-group
-                  = f.text_area :body, class: 'form-control'
+                  = f.text_area :title, class: 'form-control'
 
                 = f.hidden_field :community_id, value: @community.id
                 = f.hidden_field :user_id, value: current_user.id
