--- a/app/views/guest/users/show.html.slim
+++ b/app/views/guest/users/show.html.slim
@@ -56,9 +56,9 @@
     .mypage_profile_section
       .mypage_profile_label
         .edit_title = '自分の投稿'
-        button.edit_button.btn.btn-danger[type="button" data-toggle="modal" data-target="#sampleModal"]
+        button.edit_button.btn.btn-danger[type="button" data-toggle="modal" data-target="#createMurmurModal"]
           |  投稿
-        = render 'guest/murmurs/form_modal'
+        = render 'guest/murmurs/create_murmur_modal'
       .mypage_profile_body
         = render @user.murmurs
 
