feat: コミュ編集画面作成

--- a/app/views/guest/communities/_create_community_modal.html.slim
+++ b/app/views/guest/communities/_create_community_modal.html.slim
@@ -27,7 +27,7 @@ scss:
                   = f.text_area :introduce, class: "form-control",  placeholder: "コミュニティ説明文"
                 .form-group
                   = f.label :アイコン
-                  = f.file_field :image, class: "form-control image-field"
+                  = f.file_field :image, class: "image-field"
                 .form-check
                   label
                     = f.check_box :invitational, as: :boolean, class: 'invitational_checkbox'
