[add]target_prof_refact

--- a/app/views/guest/module/_profile.html.slim
+++ b/app/views/guest/module/_profile.html.slim
@@ -92,7 +92,7 @@
                 td = user.user_profile.style
               tr
                 th 趣味
-                td = user.user_profile.hobby.join
+                td = user.user_profile.hobby
               tr
                 th 目的
                 td = user.user_profile.purpose
@@ -104,7 +104,7 @@
                 td = user.user_profile.smoke
               tr
                 th 性格
-                td = user.user_profile.personality.join
+                td = user.user_profile.personality
           .profile_body_title = '学歴・職歴'
           .profile_sub_body
             table
