--- a/app/views/guest/likes/_sent_thanks.html.slim
+++ b/app/views/guest/likes/_sent_thanks.html.slim
@@ -1,1 +1,1 @@
-= link_to 'マッチ済み', messages_path, class: 'btn btn-default', style: "color: #B41109; width: 100%"
+= link_to 'メッセージを送る', messages_path, class: 'btn btn-default', style: "color: #B41109; width: 100%"
