--- a/app/views/guest/likes/index.html.slim
+++ b/app/views/guest/likes/index.html.slim
@@ -1,7 +1,7 @@
 .panelList_like_section
   .tab_header
     .tab_select_button お相手からのイイね
-    = link_to 'マッチングメール', messages_path, class: 'tab_bottun'
+    = link_to 'マッチングメール', partnerships_path, class: 'tab_bottun'
   - @like_users.each do |user|
     .like_panel
       = link_to like_path(user) do
