feat: 未承認メンバー一覧画面ついか

--- a/app/assets/stylesheets/guest/_style.sass
+++ b/app/assets/stylesheets/guest/_style.sass
@@ -29,7 +29,7 @@ a
   &_container
     @extend %container
     position: relative
-    margin: 0 auto
+    margin: 0 auto 50px
     +responsive(smartphone)
       fond-size: 10px
   &_header
