--- a/app/views/guest/communities/waiting_members.html.slim
+++ b/app/views/guest/communities/waiting_members.html.slim
@@ -6,25 +6,28 @@ scss:
   }
 .panelList_section
   h4.community_title 承認待ちメンバー
-  - cache @users do
-    .card_list
-      - @users.each do |user|
-        .card_content
-          .card_image
+  - if @users.blank?
+    p 未承認メンバーはいません
+  - else
+    - cache @users do
+      .card_list
+        - @users.each do |user|
+          .card_content
+            .card_image
 
-            / 画像サイズきめた後、size:100%に変更。
-            = link_to image_tag(user.user_profile.image1.cover, class: 'img-radius'), search_path(user)
+              / 画像サイズきめた後、size:100%に変更。
+              = link_to image_tag(user.user_profile.image1.cover, class: 'img-radius'), search_path(user)
 
-            .card_info
-              .card_age = "#{user.user_profile.age}歳"
-              .card_address = user.user_profile.prefecture.name
-              / TODO: 属性の画像が復活したらコメントアウト戻す
-              / .card_sex = image_tag "sex_badge_#{user.user_profile.sex}"
-          .card_body
-            .card_name = user.name
-          .card_footer
-            = form_for @community.user_communities.build, url: approve_member_community_path do |f|
-                = f.hidden_field :user_id, value: user.id
-                = f.submit '承認', class: 'btn btn-danger', data: { 'confirm': '本当に承認しますか？' }, style: 'width: 100%;'
+              .card_info
+                .card_age = "#{user.user_profile.age}歳"
+                .card_address = user.user_profile.prefecture.name
+                / TODO: 属性の画像が復活したらコメントアウト戻す
+                / .card_sex = image_tag "sex_badge_#{user.user_profile.sex}"
+            .card_body
+              .card_name = user.name
+            .card_footer
+              = form_for @community.user_communities.build, url: approve_member_community_path do |f|
+                  = f.hidden_field :user_id, value: user.id
+                  = f.submit '承認', class: 'btn btn-danger', data: { 'confirm': '本当に承認しますか？' }, style: 'width: 100%;'
 
-    = paginate @users
+      = paginate @users
