--- a/app/views/guest/murmurs/_murmur.html.slim
+++ b/app/views/guest/murmurs/_murmur.html.slim
@@ -35,7 +35,7 @@ section.murmur_panel
             |  編集
           = render 'guest/murmurs/edit_murmur_modal', murmur: murmur
 
-          = link_to '削除', murmur_path(id: murmur), method: :delete, class: 'btn btn-default', data: { confirm: 'Are you sure?' }
+          = link_to '削除', murmur_path(id: murmur), method: :delete, class: 'btn btn-default', data: { confirm: '本当に削除しますか?' }
 
       button.btn.btn-default[type="button" data-toggle="modal" data-target="#createCommentModal#{murmur.id}"]
         |  コメント
