--- a/app/views/guest/users/_profile_modal.html.slim
+++ b/app/views/guest/users/_profile_modal.html.slim
@@ -13,7 +13,7 @@
               .col-md-12.text-center
                 .form-group
                   = f.text_area :introduce, :size => "60x10", class: 'form-control', autofocus: true
-                = f.submit 'プロフィールを更新', class: "btn btn-info text-center"
+                = f.submit 'プロフィールを更新', class: "btn btn-primary"
 
 
 / 基本プロフィール編集
@@ -95,7 +95,7 @@
                   = f.file_field :image1, class: "form-control image-field"
                   = f.file_field :image2, class: "form-control image-field"
                   = f.file_field :image3, class: "form-control image-field"
-                = f.submit 'プロフィールを更新', class: "btn btn-info text-center"
+                = f.submit 'プロフィールを更新', class: "btn btn-primary"
 
 
 / 基本プロフィール編集
@@ -173,8 +173,8 @@
                   label
                     | 兄弟姉妹
                   = f.select :bro_sis, UserProfile.bro_ses.keys.to_a, {prompt:"選択してください"}, class: 'form-control'
-
-                = f.submit "プロフィールを更新", :class => "btn btn-info"
+              .text-center
+                = f.submit "プロフィールを更新", :class => "btn btn-primary"
 
 
 / 基本プロフィール編集
