--- a/app/views/guest/likes/index.html.slim
+++ b/app/views/guest/likes/index.html.slim
@@ -27,7 +27,7 @@
           - if _like.matched?
             = link_to 'マッチ済み', messages_path, class: 'btn btn-default text-dark'
           - else
-            = form_for(_like, url: match_like_path(user.id), remote: true) do |f|
+            = form_for(_like, url: match_like_path(user.id)) do |f|
               = f.hidden_field :target_id, value: current_user.id
               = f.submit 'ありがとう', class: 'btn btn-danger', style: 'width: 100%;'
 
