--- a/app/views/guest/users/_profile_modal.html.slim
+++ b/app/views/guest/users/_profile_modal.html.slim
@@ -12,7 +12,7 @@
             .row
               .col-md-12.text-center
                 .form-group
-                  = f.text_area :introduce, :size => "60x10", class: 'form-control', autofocus: true
+                  = f.text_area :introduce, :size => "60x10", class: 'form-control', autofocus: true, required: true
                 = f.submit 'プロフィールを更新', class: "btn btn-primary"
 
 
