feat: テストデータ追加

--- a/app/views/guest/partnerships/index.html.slim
+++ b/app/views/guest/partnerships/index.html.slim
@@ -25,7 +25,7 @@
                   - else
                     p まだメッセージはありません
             .panel_bottun = link_to 'チャットする', partnership_path(partnership), method: :get
-        / = paginate @partnerships
+        = paginate @partnerships
 
 
       #layout_message
