--- a/app/views/guest/charges/new.html.slim
+++ b/app/views/guest/charges/new.html.slim
@@ -15,6 +15,7 @@
       .charge_explanation_side
         = image_tag 'paid_service_info_05.png'
 
+
   = form_tag charges_path
     .charge_info
       .charge_info_title
@@ -23,16 +24,24 @@
         .charge_info_side
           = radio_button_tag :charge, "one_year",{},class: 'hide_button'
           = label_tag :charge_one_year, image_tag('paid_service_info_09.png'), class: 'charge_button'
+
+          script.stripe-button src="https://checkout.stripe.com/checkout.js" data-key="#{Rails.configuration.stripe[:publishable_key]}" data-description=("") data-locale="auto" data-name="Lemon" data-currency="JPY" data-image="/assets/sex_badge_0" data-panel-label="お支払い" data-label="購入する"
+
         .charge_info_side
           = radio_button_tag :charge, "six_months",{},class: 'hide_button'
           = label_tag :charge_six_months, image_tag('paid_service_info_08.png'), class: 'charge_button'
+          script.stripe-button src="https://checkout.stripe.com/checkout.js" data-key="#{Rails.configuration.stripe[:publishable_key]}" data-description=("Master/Amex/Visaのみ利用可能です") data-locale="auto" data-name="Lemon" data-currency="JPY" data-image="/assets/sex_badge_0" data-panel-label="お支払い" data-label="購入する"
+
       .charge_info_flex
         .charge_info_side
           = radio_button_tag :charge, "three_months",{},class: 'hide_button'
           = label_tag :charge_three_months, image_tag('paid_service_info_07.png'), class: 'charge_button'
+          script.stripe-button src="https://checkout.stripe.com/checkout.js" data-key="#{Rails.configuration.stripe[:publishable_key]}" data-description=("Master/Amex/Visaのみ利用可能です") data-locale="auto" data-name="Lemon" data-currency="JPY" data-image="/assets/sex_badge_0" data-panel-label="お支払い" data-label="購入する"
+
         .charge_info_side.charge_info_month
           = radio_button_tag :charge, "one_month",{},class: 'hide_button'
           = label_tag :charge_one_month, image_tag('paid_service_info_06.png'), class: 'charge_button'
+          script.stripe-button src="https://checkout.stripe.com/checkout.js" data-key="#{Rails.configuration.stripe[:publishable_key]}" data-description=("Master/Amex/Visaのみ利用可能です") data-locale="auto" data-name="Lemon" data-currency="JPY" data-image="/assets/sex_badge_0" data-panel-label="お支払い" data-label="購入する"
 
     .charge_coin
       .charge_coin_title
@@ -41,12 +50,15 @@
         .charge_coin_side
           = radio_button_tag :charge, "ten_coins",{},class: 'hide_button'
           = label_tag :charge_ten_coins, image_tag('ten_coins.png', :mouseover => image_path('btn_over.png')), class: 'charge_button'
+          script.stripe-button src="https://checkout.stripe.com/checkout.js" data-key="#{Rails.configuration.stripe[:publishable_key]}" data-description=("Master/Amex/Visaのみ利用可能です") data-locale="auto" data-name="Lemon" data-currency="JPY" data-image="/assets/sex_badge_0" data-panel-label="お支払い" data-label="購入する"
         .charge_coin_side
           = radio_button_tag :charge, "fifty_coins",{},class: 'hide_button'
           = label_tag :charge_fifty_coins, image_tag('fifty_coins.png'), class: 'charge_button'
+          script.stripe-button src="https://checkout.stripe.com/checkout.js" data-key="#{Rails.configuration.stripe[:publishable_key]}" data-description=("Master/Amex/Visaのみ利用可能です") data-locale="auto" data-name="Lemon" data-currency="JPY" data-image="/assets/sex_badge_0" data-panel-label="お支払い" data-label="購入する"
         .charge_coin_side
           = radio_button_tag :charge, "one_hundred_coins",{},class: 'hide_button'
           = label_tag :charge_one_hundred_coins, image_tag('one_hundred_coins.png'), class: 'charge_button'
+          script.stripe-button src="https://checkout.stripe.com/checkout.js" data-key="#{Rails.configuration.stripe[:publishable_key]}" data-description=("Master/Amex/Visaのみ利用可能です") data-locale="auto" data-name="Lemon" data-currency="JPY" data-image="/assets/sex_badge_0" data-panel-label="お支払い" data-label="購入する"
 
     .charge_stripe
       script.stripe-button src="https://checkout.stripe.com/checkout.js" data-key="#{Rails.configuration.stripe[:publishable_key]}" data-description=("Master/Amex/Visaのみ利用可能です") data-locale="auto" data-name="Lemon" data-currency="JPY" data-image="/assets/sex_badge_0" data-panel-label="お支払い"
