--- a/app/views/guest/_footer.html.slim
+++ b/app/views/guest/_footer.html.slim
@@ -1,1 +1,12 @@
 = button_to "ログアウト", destroy_user_session_path, method: :delete, class: 'btn btn-default'
+footer.footer
+  nav
+    ul
+      li
+        = link_to "特定商取引法に基づく表示", pages_law_path
+      li
+        = link_to "利用規約", pages_terms_of_service_path
+      li
+        = link_to "プライバシーポリシー", pages_privacy_policy_path
+      li
+        = link_to "安全の為のガイド", pages_guide_path
