--- a/app/views/layouts/guest.html.slim
+++ b/app/views/layouts/guest.html.slim
@@ -12,6 +12,7 @@ html
     = favicon_link_tag '/assets/favicon-32x32.png'
     = csrf_meta_tags
   body
+    ほいほい
     // container
     - if current_user.user_profile.tutorial_status == 'pending'
       .mypage_registration-tutorial-bg
@@ -39,7 +40,6 @@ html
         = render 'footer'
       - else
         = yield :footer
-
 
     #fb-root
 
